Since our eclipse plugin is based off of a very old (2006) commit, all the directories other than eclipse/ are old too (eg. docs/ drjava/ dynamicjava/ ...etc), this commit simply updates every directory excluding eclipse/ to that of the latest commit (a3e3f4c984375ca6cfff85a30e1f887b932257e3 (Dec 7, 2014)).
I couldn't figure out how to do git pull from the lastest commit into my current branch without breaking things (eg. After I did the git pull, I can no longer build drjava/ or eclipse/ because git pull seems to arbitrarily(?) move around files that have the same name between two different commits and then build.xml scripts can't find those files anymore), so I manually removed all the directories except eclipse/ and did a git checkout on these directories from the latest commit.